<resources>
    <string name="app_name">loginSharedPreferences</string>
    <string name="username">Username *</string>
    <string name="password">Password *</string>
    <string name="saveLogin">Remember me</string>
    <string name="login">Login</string>
    <string name="enterUsername">Enter Username</string>
    <string name="enterPassword">Enter Password</string>
    <string name="welcome">Welcome: </string>
</resources>